samples/ingress/cumulocity-iot-edge-ingress-traefik.yaml
---
#
# Ingress to access Cumulocity IoT application running on Pods labeled "cumulocity-core" over HTTP.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cumulocity-iot-edge                # Replace with the Edge CR name you used
  name: http-ingress-traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.tls.passthrough: "false" # As the SSL termination happens at OpenResty in the Core pod
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-service               # Name of the HTTP service for exposing the "cumulocity-core" pods
                port:
                  number: 80
